Global Style modification

--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
     <h4>Lorem ipsum dolor sit amet.</h4>
     <h5>Lorem ipsum dolor sit amet.</h5>
     <h6>Lorem ipsum dolor sit amet.</h6>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
+      repudiandae?
+    </p>
   </body>
 </html>
